--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
         <h3>Todos os direitos reservados.</h3>
         <p><a href="https://www.linkedin.com/in/douglasmiranda1997/"><i class="fab fa-linkedin-in"></i>Douglas Antonio Miranda</a></p>
     </footer>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
