--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <footer>
         <h3>Todos os direitos reservados.</h3>
-        <p><a href="https://www.linkedin.com/in/douglasmiranda1997/"><i class="fab fa-linkedin-in"></i>Douglas Antonio Miranda</a></p>
+        <p><a href="https://www.linkedin.com/in/douglasmiranda1997/" target="_blank"><i class="fab fa-linkedin-in"></i>Douglas Antonio Miranda</a></p>
     </footer>
     <script src="app.js"></script>
 </body>
